--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^0.28.4",
     "eslint-loader": "^1.8.0",
     "path": "^0.12.7",
+    "react-rpm": "^1.0.1",
     "standard": "^10.0.2",
     "standard-loader": "^6.0.1",
     "style-loader": "^0.18.2",
