--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/btholt/complete-intro-to-react#readme",
   "dependencies": {
     "axios": "^0.16.2",
+    "bulma": "^0.4.2",
+    "prettier": "^1.5.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "4.0.0-alpha.4"
