--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,6 @@
   "presets": [
     "react",
     ["es2015", {"modules": false, "loose": true}]
-  ]
+  ],
+  "plugins": ["react-hot-loader/babel"]
 }
