--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bulma": "^0.4.2",
-    "prettier": "^1.5.2",
+    "comic-list": "^1.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "4.0.0-alpha.4"
@@ -33,8 +35,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-prettier": "^2.3.0",
     "eslint-loader": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.1.2",
     "path": "^0.12.7",
+    "prettier": "^1.5.2",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-rpm": "^1.0.1",
     "standard": "^10.0.2",
