--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "comic-list": "^1.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.1.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "4.0.0-alpha.4"
