--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-  "presets": [
-    "react",
-    ["es2015", {"modules": false, "loose": true}]
-  ],
-  "plugins": ["react-hot-loader/babel"]
+  "presets": ["react", ["es2015", { "modules": false, "loose": true }]],
+  "plugins": ["react-hot-loader/babel", "transform-object-rest-spread"]
 }
