--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-preload": "^0.5.1",
     "react-router": "4.0.0-alpha.4"
   },
   "devDependencies": {
