firebase kind of working

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "comic-list": "^1.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.1.0",
+    "firebase": "^4.3.0",
     "prop-types": "^15.5.10",
+    "re-base": "^3.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-preload": "^0.5.1",
